@@ -46,7 +46,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Represents a request for a Ballerina AST Modify.
@@ -147,7 +146,7 @@ public class BallerinaTriggerModifyUtil {
             if (node.kind() == SyntaxKind.FUNCTION_DEFINITION) {
                 FunctionDefinitionNode functionDefinitionNode = (FunctionDefinitionNode) node;
                 List<String> qualifiers = functionDefinitionNode.qualifierList().stream().map(Token::text)
-                        .collect(Collectors.toList());
+                        .toList();
                 if (qualifiers.contains(SyntaxKind.RESOURCE_KEYWORD.stringValue())) {
                     resources.add(functionDefinitionNode);
                 }
