@@ -16,7 +16,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -54,7 +53,7 @@ public class JarIntegrationTest {
 
         PackageID moduleID = new PackageID(Names.ANON_ORG, Names.DEFAULT_PACKAGE, Names.DEFAULT_VERSION);
         List<CompilerInput> sources = balPatten.convertToSources(subject, moduleID)
-                .collect(Collectors.toList());
+                .toList();
 
         Assert.assertEquals(sources.size(), 1);
         Assert.assertEquals(sources.get(0).getCode(), BAL_CONTENT);
